Fixed aboutme img value to be object-fit: cover so that img doesn't stretch

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
     display: block;
     margin: 35px auto auto auto;
     position: absolute;
+    object-fit: cover;
 }
 
 .aboutme div {
